tests/ui/async-await/issues/issue-95307.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/issue-95307.rs:7:28
   |
LL |     async fn new() -> [u8; _];
   |                            ^ not allowed in type signatures

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0121`.
